force-app/main/default/objects/Lead/fields/HC13_ReasonForDisqualification__c.field-meta.xml
<CustomField>
    <fullName>HC13_ReasonForDisqualification__c</fullName>
    <label>Reason for Disqualification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Another agency is involved</fullName>
            </value>
            <value>
                <fullName>MD declines to sign orders</fullName>
            </value>
            <value>
                <fullName>Patient isn’t eligible for insurance</fullName>
            </value>
            <value>
                <fullName>Patient is outside coverage area</fullName>
            </value>
            <value>
                <fullName>Patient refuses services</fullName>
            </value>
            <value>
                <fullName>Referral was canceled</fullName>
            </value>
            <value>
                <fullName>Requested services aren’t needed</fullName>
            </value>
            <value>
                <fullName>Requested services can’t be provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>