force-app/main/default/objects/Lead/fields/HC13_SigningProvider__c.field-meta.xml
<CustomField>
    <fullName>HC13_SigningProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signing Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Signing Provider)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>