force-app/main/default/objects/Lead/fields/HealthCloudGA__StatusGroup__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__StatusGroup__c</fullName>
    <label>Status Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Monitored</fullName>
            </value>
            <value>
                <fullName>NotMonitored</fullName>
                <label>Not Monitored</label>
            </value>
            <value>
                <fullName>PositiveTest</fullName>
                <label>Positive Test</label>
            </value>
            <value>
                <fullName>ReadyForIntake</fullName>
                <label>Ready for Intake</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>