force-app/main/default/objects/Lead/recordTypes/HealthCloudGA__Patient.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__Patient</fullName>
    <active>true</active>
    <businessProcess>HealthCloudGA__LeadToPatientProcess</businessProcess>
    <description>Patient record type</description>
    <label>Patient</label>
</RecordType>